--- a/krichtexteditor/src/main/res/layout/editor_toolbar_button.xml
+++ b/krichtexteditor/src/main/res/layout/editor_toolbar_button.xml
@@ -2,5 +2,6 @@
 <androidx.appcompat.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="42dp"
     android:id="@+id/image_view"
+    android:padding="8dp"
     android:background="?selectableItemBackground"
     android:layout_height="42dp" />
