--- a/krichtexteditor/src/main/res/layout/view_krich_editor.xml
+++ b/krichtexteditor/src/main/res/layout/view_krich_editor.xml
@@ -41,9 +41,28 @@
                 android:id="@+id/tools_scroll_view"
                 android:layout_height="42dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tools_container"
+                    android:orientation="horizontal"/>
+
             </HorizontalScrollView>
 
         </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:id="@+id/editor_menu_container"
+            android:layout_height="132dp">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/editor_menu_scroll_view"/>
+
+        </FrameLayout>
         
     </LinearLayout>
     
